# lidar-global-registration

./: .gitignore  CMakeLists.txt  README.md  config_generation.py  convert_datasets.py  global_registration.py  load_datasets.sh  notebook.ipynb  overlapping.py  plots.py  process_datasets.py  requirements.txt
.github/scripts/: install_opencv451.sh  install_pcl1121.sh  load_testdata.sh
.github/workflows/: workflow.yml
data/: test.yaml  test_levels.csv  tests.yaml
data/1-SubwayStation/: viewpoints.csv
data/10-UndergroundExcavation/: viewpoints.csv
data/7-Residence/: viewpoints.csv
data/8-RiverBank/: viewpoints.csv
data/Hokuyo/: Hokuyo.yaml
data/KilwaKisiwani_LIDAR/: KilwaKisiwani.yaml
data/bun/: bun.yaml
data/kizhi/: kizhi_fpfh.yaml
data/tests/: flann_bf_matcher.yaml  flann_bf_matcher_invalid_points.yaml  keypoint_extraction.yaml
experiments/: CMakeLists.txt  experiments.cpp  keypoints.cpp  keypoints.h
include/: align.h  alignment.h  analysis.h  common.h  config.h  correspondence_search.h  csv_parser.h  downsample.h  feature_analysis.h  filter.h  hypotheses.h  io.h  matching.h  metric.h  pch.h  quadric.h  rops_custom_lrf.h  sac_prerejective_omp.h  shot_debug.h  transformation.h  utils.h  weights.h
include/gror/: gror_pre.h  ia_gror.h  ia_gror.hpp
include/impl/: rops_custom_lrf.hpp  sac_prerejective_omp.hpp
include/pcl/: iss_debug.h  rops_custom_lrf.h
src/: align.cpp  alignment.cpp  analysis.cpp  common.cpp  config.cpp  correspondence_search.cpp  csv_parser.cpp  downsample.cpp  feature_analysis.cpp  filter.cpp  hypotheses.cpp  iss_debug.cpp  iss_debug.h  main.cpp  matching.cpp  metric.cpp  quadric.cpp  sac_prerejective_omp.cpp  shot_debug.cpp  transformation.cpp  utils.cpp  weights.cpp
src/gror/: gror_pre.cpp
src/pcl/: iss_debug.cpp  shot_debug.cpp
tests/: CMakeLists.txt  flann_bf_matcher.cpp  flann_bf_matcher.h  keypoint_extraction.cpp  knn_result.cpp  point2plane_distance.cpp
