add_executable(experiments experiments.cpp ../src/config.cpp ../src/csv_parser.cpp ../src/alignment.cpp ../src/common.cpp ../src/filter.cpp ../src/analysis.cpp ../src/feature_analysis.cpp ../src/downsample.cpp ../src/utils.cpp ../src/metric.cpp ../src/weights.cpp ../src/gror/gror_pre.cpp ../src/transformation.cpp ../src/matching.cpp ../src/correspondence_search.cpp ../src/sac_prerejective_omp ../src/shot_debug.cpp ../src/iss_debug.cpp ../src/hypotheses.cpp)
target_link_libraries(experiments ${PCL_LIBRARIES} ${OpenCV_LIBS} yaml-cpp teaserpp::teaser_registration)
target_include_directories(experiments PUBLIC ../include/)